página inicial do jogo criada em HTML, usando div's para os containers de cada elemento do jogo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gorilla x 100 humanos</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
    <div class="game-container"></div> 
 
    <!--barra de status do gorilla-->
    <div class="gorilla-status"></div>
-   
+
+   <div class="gorila" id="gorila"></div> <!-- usado class para estilizar no css, e id para dar movimentação no JS -->
+
+   <div class="humanos" id="humanos"></div>
+
+   <script></script>
 </body>
 </html>
