adição do humano para lutar com o gorilla, botão de atacar e melhora da disposição dos elementos na tela.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- Humanos -->
     <div class="humanos" id="humanos"></div>
 
+    <!-- botões ataque gorilla -->
+     <div class="botao-ataque" id="botao-ataque"><p>ATACAR</p></div>
+
   </div>
 
 </body>
